[gd_scene load_steps=26 format=3 uid="uid://b7qcbfueopawi"]

[ext_resource type="FontFile" uid="uid://llyue0qrvm3r" path="res://Assets/Fonts/ProggyClean.ttf" id="1_bthaf"]
[ext_resource type="Script" uid="uid://br3gsokp76xid" path="res://Scripts/pause_ui.gd" id="1_srqh7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_2xxc1"]
bg_color = Color(0.251877, 0.487383, 0.376665, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uvi5b"]
bg_color = Color(0.251877, 0.487383, 0.376665, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ywlh3"]
bg_color = Color(0.297792, 0.56028, 0.436331, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_w3mym"]
bg_color = Color(0.251877, 0.487383, 0.376665, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_srqh7"]
bg_color = Color(0.375594, 0.671851, 0.530431, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_r8fmr"]
bg_color = Color(0.251877, 0.487383, 0.376665, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_yx2bn"]
bg_color = Color(0.251877, 0.487383, 0.376665, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_6y6vx"]
bg_color = Color(0.297792, 0.56028, 0.436331, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_554wf"]
bg_color = Color(0.251877, 0.487383, 0.376665, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_wjxjj"]
bg_color = Color(0.375594, 0.671851, 0.530431, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_uu8f0"]
bg_color = Color(0.251877, 0.487383, 0.376665, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_eqqw8"]
bg_color = Color(0.297792, 0.56028, 0.436331, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mtrm7"]
bg_color = Color(0.375594, 0.671851, 0.530431, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_vpay5"]
bg_color = Color(0.251877, 0.487383, 0.376665, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s1pxl"]
bg_color = Color(0.251877, 0.487383, 0.376665, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ipnwg"]
bg_color = Color(0.297792, 0.56028, 0.436331, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_36amk"]
bg_color = Color(0.251877, 0.487383, 0.376665, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dj8ul"]
bg_color = Color(0.375594, 0.671851, 0.530431, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_iksgo"]
bg_color = Color(0.251877, 0.487383, 0.376665, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a0l0k"]
bg_color = Color(0.251877, 0.487383, 0.376665, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_043jw"]
bg_color = Color(0.297792, 0.56028, 0.436331, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_knkv6"]
bg_color = Color(0.251877, 0.487383, 0.376665, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_cf5hy"]
bg_color = Color(0.375594, 0.671851, 0.530431, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16
anti_aliasing = false

[node name="PauseUI" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_srqh7")

[node name="Buttons" type="VBoxContainer" parent="."]
z_index = 100
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -127.5
offset_top = -134.0
offset_right = 127.5
offset_bottom = 134.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 15
alignment = 1

[node name="Resume" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_bthaf")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_2xxc1")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_uvi5b")
theme_override_styles/hover = SubResource("StyleBoxFlat_ywlh3")
theme_override_styles/pressed = SubResource("StyleBoxFlat_w3mym")
theme_override_styles/normal = SubResource("StyleBoxFlat_srqh7")
text = "Resume"

[node name="Restart" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_bthaf")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_r8fmr")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_yx2bn")
theme_override_styles/hover = SubResource("StyleBoxFlat_6y6vx")
theme_override_styles/pressed = SubResource("StyleBoxFlat_554wf")
theme_override_styles/normal = SubResource("StyleBoxFlat_wjxjj")
text = "Restart"

[node name="Controls" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_bthaf")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_uu8f0")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_uu8f0")
theme_override_styles/hover = SubResource("StyleBoxFlat_eqqw8")
theme_override_styles/pressed = SubResource("StyleBoxFlat_uu8f0")
theme_override_styles/normal = SubResource("StyleBoxFlat_mtrm7")
text = "Controls
"

[node name="Back to Menu" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_bthaf")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_vpay5")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_s1pxl")
theme_override_styles/hover = SubResource("StyleBoxFlat_ipnwg")
theme_override_styles/pressed = SubResource("StyleBoxFlat_36amk")
theme_override_styles/normal = SubResource("StyleBoxFlat_dj8ul")
text = "Back to Menu"

[node name="Exit" type="Button" parent="Buttons"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_pressed_color = Color(0, 0, 0, 1)
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_bthaf")
theme_override_font_sizes/font_size = 32
theme_override_styles/focus = SubResource("StyleBoxFlat_iksgo")
theme_override_styles/hover_pressed = SubResource("StyleBoxFlat_a0l0k")
theme_override_styles/hover = SubResource("StyleBoxFlat_043jw")
theme_override_styles/pressed = SubResource("StyleBoxFlat_knkv6")
theme_override_styles/normal = SubResource("StyleBoxFlat_cf5hy")
text = "Exit"

[connection signal="pressed" from="Buttons/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Buttons/Restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="Buttons/Controls" to="." method="_on_controls_pressed"]
[connection signal="pressed" from="Buttons/Back to Menu" to="." method="_on_back_to_menu_pressed"]
[connection signal="pressed" from="Buttons/Exit" to="." method="_on_exit_pressed"]
